@@ -69,6 +69,12 @@ class ResourcesTest < Test::Unit::TestCase
     end
   end
 
+  def test_with_custom_conditions
+    with_restful_routing :messages, :conditions => { :subdomain => 'app' } do
+      assert_equal 'app', ActionController::Routing::Routes.named_routes.routes[:messages].conditions[:subdomain]
+    end
+  end
+
   def test_irregular_id_with_no_requirements_should_raise_error
     expected_options = {:controller => 'messages', :action => 'show', :id => '1.1.1'}
 
